# IronDrop

./: .gitignore  Cargo.toml  LICENSE  README.md  Readme.md  dist-workspace.toml  flake.nix  rust-toolchain.toml
.github/workflows/: rust.yml
config/: irondrop.ini
doc/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION_SYSTEM.md  DEPLOYMENT.md  HTTP_STREAMING.md  MONITORING.md  MULTIPART_README.md  README.md  RFC_OWASP_COMPLIANCE.md  SEARCH_FEATURE.md  SECURITY_FIXES.md  TEMPLATE_SYSTEM.md  TEMPLATE_SYSTEM_V2.md  TESTING_DOCUMENTATION.md  UPLOAD_INTEGRATION.md  WEBDAV_IMPLEMENTATION.md
src/: cli.rs  error.rs  fs.rs  handlers.rs  http.rs  lib.rs  main.rs  middleware.rs  multipart.rs  response.rs  router.rs  search.rs  server.rs  templates.rs  ultra_compact_search.rs  ultra_memory_test.rs  upload.rs  utils.rs  webdav.rs
src/config/: ini_parser.rs  mod.rs
templates/common/: base.css  base.html  logout.html
templates/directory/: content.html  index.html  script.js  styles.css
templates/error/: content.html  page.html  script.js  simple.html  styles.css
templates/monitor/: content.html  page.html  script.js  styles.css
templates/upload/: content.html  form.html  page.html  script.js  styles.css  success.html
tests/: async_runtime_starvation_test.rs  base_path_test.rs  comprehensive_test.rs  config_test.rs  debug_upload_test.rs  direct_upload_test.rs  edge_case_test.rs  feature_integration_test.rs  file_size_debug_test.rs  hidden_files_test.rs  http_parser_test.rs  http_requestbody_test.rs  http_streaming_test.rs  integration_test.rs  large_file_bash_test.rs  large_file_upload_test.rs  log_dir_test.rs  memory_leak_fix_test.rs  memory_optimization_test.rs  memory_usage_test.rs  middleware_test.rs  monitor_test.rs  multipart_streaming_test.rs  multipart_test.rs  performance_test.rs  post_body_test.rs  rate_limiter_memory_test.rs  rate_limiter_smart_eviction_test.rs  realistic_upload_test.rs  response_utils_test.rs  ssl_test.rs  stress_test.rs  template_embedding_test.rs  templates_escape_test.rs  test_1gb_upload.sh  test_executable_portability.sh  test_upload.sh  ultra_compact_test.rs  upload_integration_test.rs  utils_parse_path_test.rs  (+10 more)
