[package]
name = "irondrop"
version = "2.6.3"
edition = "2024"
license = "MIT"
description = "Drop files, not dependencies - a well tested fully featured & battle-ready server in a single Rust binary with support for indexing through 10M files."
repository = "https://github.com/dev-harsh1998/IronDrop"
readme = "README.md"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
glob = "0.3.1"
log = "0.4.20"
env_logger = "0.11.3"
base64 = "0.22.1"


[dev-dependencies]
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde_json = "1.0"
tempfile = "3.20.0"
threadpool = "1.8.1"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximum size reduction, longer compile time
panic = 'abort'     # Remove panic unwinding code
strip = true        # Strip symbols from binary
debug = false       # No debug symbols
debug-assertions = false  # Disable debug assertions
overflow-checks = false   # Disable integer overflow checks


