[package]
name = "irondrop"
version = "2.6.4"
edition = "2024"
license = "MIT"
description = "Drop files, not dependencies - a well tested fully featured & battle-ready server in a single Rust binary with support for indexing through 10M files."
repository = "https://github.com/dev-harsh1998/IronDrop"
readme = "README.md"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
glob = "0.3.3"
log = "0.4.29"
env_logger = "0.11.10"
base64 = "0.22.1"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "logging", "tls12"] }
rustls-pemfile = "2"


[dev-dependencies]
reqwest = { version = "0.13", features = ["blocking", "json"] }
serde_json = "1.0"
tempfile = "3.27"
threadpool = "1.8.1"
rcgen = "0.14"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Maximum size reduction, longer compile time
panic = 'abort'     # Remove panic unwinding code
strip = true        # Strip symbols from binary
debug = false       # No debug symbols
debug-assertions = false  # Disable debug assertions
overflow-checks = false   # Disable integer overflow checks

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


